[package]
name = "mangorpc-latency-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17.31"
solana-rpc-client = "1.17.31"
solana-rpc-client-api = "1.17.31"
websocket-tungstenite-retry = { git = "https://github.com/grooviegermanikus/websocket-tungstenite-retry.git", tag = "v0.8.0" }
quic-geyser-client = { git = "https://github.com/blockworks-foundation/quic_geyser_plugin.git", rev = "2406976" }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tokio = { version = "1.28.2", features = ["full", "fs"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
jsonrpsee-types = "0.22.2"

url = "2.5.0"
