[package]
name = "mangorpc-latency-tester"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpc-node-check-alive"
path = "src/rpcnode_check_alive.rs"

[[bin]]
name = "slot-latency-tester"
path = "src/slot_latency_tester.rs"

[dependencies]
solana-sdk = "1.17.31"
solana-rpc-client = "1.17.31"
solana-rpc-client-api = "1.17.31"
solana-account-decoder = "1.17.31"
websocket-tungstenite-retry = { git = "https://github.com/grooviegermanikus/websocket-tungstenite-retry.git", tag = "v0.8.0" }
geyser-grpc-connector = { tag = "v0.10.6+yellowstone.1.13+solana.1.17.28", git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git" }
yellowstone-grpc-client = "~1.14.0"
yellowstone-grpc-proto = "~1.13.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tokio = { version = "1.28.2", features = ["full", "fs"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
jsonrpsee-types = "0.22.2"

anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
enum-iterator = "2.1.0"

gethostname = "0.4.3"
url = "2.5.0"
config = "0.14.0"
itertools = "0.10.5"
